--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "json-schema-service",
   "version": "1.0.0",
-  "description": "A JSON schema validation library.",
+  "description": "handling typescript types <-> json schemas by decorators or declarative",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "clean": "rm -rf dist",
+    "prepare": "npm run clean && npm run build",
+    "test": "jest",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write ."
   },
-  "keywords": ["json", "schema", "validator"],
-  "author": "Your Name",
+  "keywords": [
+    "json",
+    "schema",
+    "service"
+  ],
+  "author": "Yaron Gilo",
   "license": "ISC",
   "repository": {
     "type": "git",
@@ -17,7 +25,9 @@
   },
   "devDependencies": {
     "@types/jest": "^29.5.12",
+    "eslint": "^9.10.0",
     "jest": "^29.7.0",
+    "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
     "typescript": "^5.5.4"
   },
