--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prepare": "npm run clean && npm run build",
     "test": "jest",
     "lint": "eslint . --ext .ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "docs": "typedoc --out docs src"
   },
   "keywords": [
     "json",
@@ -29,6 +30,7 @@
     "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "ts-jest": "^29.2.5",
+    "typedoc": "^0.26.7",
     "typescript": "^5.5.4"
   },
   "dependencies": {
